--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,10 @@
   <meta name="description" content="Tech, blogging site, mostly how to guides and software development">
   <meta name="author" content="Austin Cunningham">
   <meta name="keywords" content="tech,guides,software,developement,node,opensource,keycloak,openshift,ansible,fullstack">
-  
+  <meta property=”og:title” content=”Austin Cunninghams Blog - Tech blogging and how to guides”/>
+  <meta property=”og:description” content=”Tech, blogging site, mostly how to guides and software development” />
+  <meta property=”og:image” content=”https://austincunningham.ddns.net/social/social.png” />
+
 </head>
 
 <body>
