--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+  <link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/agate.min.css">
+  <script  charset="UTF-8"  src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/languages/go.min.js"></script> 
+  <script>hljs.highlightAll();</script>
   <meta name="google-site-verification" content="KK3YKQVjDv8ltS-rTfFVUYbx0AIqUVWshs_uYY3OX9c" />
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138297422-1"></script>
   <script>
