move mastodon link

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,8 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
-
+  <a rel="me" href="https://mastodon.ie/@austincunningham">.
+  </a>
 </body>
 
 </html>
