Update cookie message for GDPR compliance

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,7 @@
   <script charset="UTF-8" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/languages/go.min.js"></script>
   <script type="application/javascript">hljs.initHighlighting();</script>
   <meta name="google-site-verification" content="KK3YKQVjDv8ltS-rTfFVUYbx0AIqUVWshs_uYY3OX9c" />
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138297422-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'UA-138297422-1');
-  </script>
+  <!-- Google Analytics will be loaded conditionally based on cookie consent -->
   <script>
     (function () {
       var redirect = sessionStorage.redirect;
@@ -50,7 +44,7 @@
   </script>
   
 
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" href="/myblog/favicon.ico">
   <title>Austin Cunningham's Blog - Tech blogging and how to guides</title>
   <meta name="description" content="Tech, blogging site, mostly how to guides and software development">
   <meta name="author" content="Austin Cunningham">
