update favicon localtion

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
   </script>
   
 
-  <link rel="icon" href="/myblog/favicon.ico">
+  <link rel="icon" href="/favicon.ico">
   <title>Austin Cunningham's Blog - Tech blogging and how to guides</title>
   <meta name="description" content="Tech, blogging site, mostly how to guides and software development">
   <meta name="author" content="Austin Cunningham">
